<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".Admin.AddEmployeeFragment">


    <EditText
        android:id="@+id/et_new_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:hint="@string/please_enter_username_new_employee"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:background="@drawable/edt_background"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_new_username"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/please_enter_password_for_employee"
        android:textAlignment="center"
        android:background="@drawable/edt_background"/>

    <Button
        android:id="@+id/bt_create_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212121"
        android:layout_below="@id/et_new_password"
        android:layout_marginTop="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/create_new_employee"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        />


</RelativeLayout>