<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:background="#FFFFFF"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_family"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_family_book"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tx_show_paterfamilias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_family"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/paterfamilias"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_paterfamilias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_family"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_paterfamilias"
            android:text="Ramdan Faleh Massadeh ."
            android:textColor="#7C7C7C"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_show_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_show_paterfamilias"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="Address :"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_paterfamilias"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_address"
            android:text="Irbid - Hakama ."
            android:textColor="#7C7C7C"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_show_national"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_show_address"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/national_number"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_national"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_address"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_national"
            android:text="9961049240 ."
            android:textColor="#7C7C7C"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_show_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_show_national"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/book_number"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_national"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_book"
            android:text="123456 ."
            android:textColor="#7C7C7C"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_show_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_show_book"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/place_issue"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_book"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_place"
            android:text="Irbid Irbid ."
            android:textColor="#7C7C7C"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_show_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_show_place"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/place_issue"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_book"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_place"
            android:textColor="#7C7C7C"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_show_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_show_place"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/place_issue"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_place"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_date"
            android:text="01/03/2020 ."
            android:textColor="#7C7C7C"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tx_show_name_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_show_date"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_request"
            android:textColor="#212121"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx_name_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_date"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/tx_show_date"
            android:text="01/03/2020 ."
            android:textColor="#7C7C7C"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/img_approve"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/tx_show_name_status"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_approve"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/img_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/tx_show_name_status"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tx_push_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tx_approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FE11C503"
            android:text="@string/approve"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tx_show_name_status"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>